--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title: My blog
-description: My very nice blog
-author: "Jorge Sanz"
+title: AS57965
+description: AS57965 - Peering Policy
+author: ""
 
 theme: minima
 
 base_url: /gh-pages-minima-starter
-repository: jsanz/gh-pages-minima-starter
+repository: Deadlyelder/gh-pages-minima-starter
 
 # Minima social links
-github_username: jsanz
-linkedin_username: jsanz
-rss: rss
+#github_username: jsanz
+#linkedin_username: jsanz
+#rss: rss
 
 # Minima: show excerpts in the frontpage
-show_excerpts: true
+# show_excerpts: true
 
 minima:
   date_format: "%Y-%m-%d"
@@ -21,14 +21,15 @@ minima:
 # Minima: custom header links
 header_pages:
   - _pages/frontpage.md
-  - _pages/about.md
-  - _pages/archive.md
+#  - _pages/about.md
+#  - _pages/archive.md
 
 include:
     - _pages
 
 exclude: 
     - .gitignore
+    - _posts
     - docker-compose.yml
     - Gemfile
     - Gemfile.lock
